--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
                 <h3>Archivos Adjuntos:</h3>
 <div class="gallery-container">
     <div class="gallery-item">
-        <img src="img/e2.png" alt="Descripción de la imagen 1">
+        <img src="e2.png" alt="Descripción de la imagen 1">
     </div> <br>
     <div class="gallery-item">
-        <img src="img/e1.png" alt="Descripción de la imagen 2">
+        <img src="/e1.png" alt="Descripción de la imagen 2">
     </div> <br>
     <div class="gallery-item">
         <video controls>
-            <source src="img/e.mp4" type="video/mp4">
+            <source src="e.mp4" type="video/mp4">
             Tu navegador no soporta la reproducción de video.
         </video>
     </div>
