--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 
                 <h3>Archivos Adjuntos:</h3>               
                     <div class="gallery-item">
-                        <img src="img/r.png" alt="Descripción de la imagen 2">
+                        <img src="r.png" alt="Descripción de la imagen 2">
                     </div> <br>
                     <div class="gallery-item">
                         <video controls>
-                            <source src="img/r1.mp4" type="video/mp4">
+                            <source src="r1.mp4" type="video/mp4">
                             Tu navegador no soporta la reproducción de video.
                         </video>
                     </div>
@@ -153,7 +153,7 @@
         <img src="e2.png" alt="Descripción de la imagen 1">
     </div> <br>
     <div class="gallery-item">
-        <img src="/e1.png" alt="Descripción de la imagen 2">
+        <img src="e1.png" alt="Descripción de la imagen 2">
     </div> <br>
     <div class="gallery-item">
         <video controls>
@@ -219,11 +219,11 @@
                 <h3>Archivos Adjuntos:</h3>
                 <div class="gallery-container">
                     <div class="gallery-item">
-                        <img src="img/t1.png" alt="Descripción de la imagen 1">
+                        <img src="t1.png" alt="Descripción de la imagen 1">
                     </div>  <br>                 
                     <div class="gallery-item">
                         <video controls>
-                            <source src="img/t1.mp4" type="video/mp4">
+                            <source src="t1.mp4" type="video/mp4">
                             Tu navegador no soporta la reproducción de video.
                         </video>
                     </div>
